Animation Player draws non-uniformly scaled when resizing window #110204

Closed
opened 2023-07-17 14:01:35 +02:00 by Philipp Oeser · 1 comment
Member

System Information
Operating system: Linux-6.1.18-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits, WAYLAND UI
Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.7, DRM 3.49, 6.1.18-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.7

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-16 17:58, hash: 8191b152ecf1
Broken: 2.93
Worked: 2.92

Caused by fd3e44492e

Short description of error
Animation Player draws non-uniformly scaled when resizing window

Exact steps for others to reproduce the error
from the default startup file:

  • Ctrl F12 (to render a couple of frames
  • Ctrl F11 (to view the sequence in the animation player)
  • resize the window non uniformly
  • images will fill the entire window (so images get squashed/squeezed)

Observed:
image

Expected;
image

**System Information** Operating system: Linux-6.1.18-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits, WAYLAND UI Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.7, DRM 3.49, 6.1.18-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.7 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-16 17:58, hash: `8191b152ecf1` Broken: 2.93 Worked: 2.92 Caused by fd3e44492e7606a741a6d2c42b31687598c7d09a **Short description of error** Animation Player draws non-uniformly scaled when resizing window **Exact steps for others to reproduce the error** from the default startup file: - Ctrl F12 (to render a couple of frames - Ctrl F11 (to view the sequence in the animation player) - resize the window non uniformly - images will fill the entire window (so images get squashed/squeezed) Observed: ![image](/attachments/5c053ee9-7ca8-4957-8b3d-d769363cd4ff) Expected; ![image](/attachments/4775740b-01bb-4940-8898-ddf8e37ede76)
Philipp Oeser self-assigned this 2023-07-17 14:02:13 +02:00
Member

Wait I thought this was deliberately the case since like... forever 😅. Glad it was not the intended behavior.

Wait I thought this was deliberately the case since like... forever 😅. Glad it was not the intended behavior.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-18 14:11:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110204
No description provided.